# ai_mcp_playground

./: .gitignore  .mcp.json  README.md
cline_llm_logger_server/: README.md  llm_logger.py  llm_response_use_mcp_1.xml  pyproject.toml  system_prompt.md
weather/: README.md  mcp_io_learn.txt  mcp_logger.py  mcp_server_tool_list_response_log.json  pyproject.toml  weather.py
